# ZynkPOS2026

./: .gitignore  LassanaPata-POS.code-workspace  README.md  index.html  package-lock.json  package.json  release.ps1  setup.ps1  tailwind.config.js  vite.config.ts
.github/instructions/: workspace lassanapata.instructions.md
.github/workflows/: release.yml
src/: App.tsx  api.ts  branding.ts  index.css  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AuditLogsModal.tsx  CartPanel.tsx  CategoryBar.tsx  CustomerDisplayWindow.tsx  CustomerPicker.tsx  DaySessionModal.tsx  DrawingCanvas.tsx  JobCardModal.tsx  JobCardsListModal.tsx  LoginScreen.tsx  POSLayout.tsx  PaymentModal.tsx  PrinterSettingsModal.tsx  ProductCard.tsx  ProductPanel.tsx  ReceiptModal.tsx  SettingsModal.tsx  TierDialog.tsx  ToastContainer.tsx  TopBar.tsx  TransactionsModal.tsx
src/utils/: printDotMatrix.ts
